src/objects/DAZN_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Community_URL__c</fullName>
        <label>Community URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address_For_Case_Actions__c</fullName>
        <label>Email Address For Case Actions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address_For_Lead_Actions__c</fullName>
        <label>Email Address For Lead Actions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DAZN Configuration</label>
    <pluralLabel>DAZN Configurations</pluralLabel>
</CustomObject>